--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VIP Contact | Aristeo Herrera</title>
+    <title>VIP Contact | Neuro</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -1135,7 +1135,7 @@
 
         <!-- Footer -->
         <footer class="text-center py-8 border-t border-gray-800">
-            <p class="text-gray-500 mb-4">&copy; <span id="year"></span> Aristeo Herrera. All rights reserved.</p>
+            <p class="text-gray-500 mb-4">&copy; <span id="year"></span> Neuro. All rights reserved.</p>
             <p class="text-gray-600 text-sm">Professional contact information | VIP access only</p>
         </footer>
     </div>
